add and edit corrected

--- a/management/templates/add_topping.html
+++ b/management/templates/add_topping.html
@@ -10,6 +10,6 @@
     <table>
     {{ form.as_table }}
     </table>
-    <input type="submit" value="Dodaj" />
+    <input type="submit" value="Confirm" />
 </body>
 </html>
