--- a/management/templates/add_pizza.html
+++ b/management/templates/add_pizza.html
@@ -10,7 +10,7 @@
     <table>
     {{ form.as_table }}
     </table>
-    <input type="submit" value="Dodaj" />
+    <input type="submit" value="Confirm" />
 </form>
 </body>
 </html>
