--- a/management/templates/show_pizza.html
+++ b/management/templates/show_pizza.html
@@ -7,15 +7,33 @@
 <body>
 
 <table>
-    <th>Nazwa: </th><th>Dodatki:</th><th>Cena:</th>
+    <th>Name:</th><th>Toppings:</th><th>Price:</th>
     {% for pizza in pizzas %}
     <tr>
         <td>{{pizza.name}}</td>
         <td>{% for topping in pizza.toppings.all %} {{topping}} {% endfor %}</td>
         <td>{{pizza.price}}</td>
+        <!--<td><a href="/editpizza/{{ pizza.id }}">Edit</a></td>-->
+        <td>
+            <form action="/editpizza/{{ pizza.id }}">
+                <input type="submit" value="Edit" />
+            </form>
+        </td>
+        <!--<td><a href="/delete-pizza/{{ pizza.id }}">Delete</a></td>-->
+        <td>
+            <form action="/delete-pizza/{{ pizza.id }}">
+                <input type="submit" value="Delete" />
+            </form>
+        </td>
     </tr>
     {% endfor %}
 </table>
+<form action="/addpizza/">
+    <input type="submit" value="Add new pizza" />
+</form>
+<form action="/">
+    <input type="submit" value="Back" />
+</form>
 
 </body>
 </html>
